UPDATE : postgreSQL-DB was connected with NestJS-Server by MikroORM

--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "generate-entities": "mikro-orm generate-entities --save --path=./database/entities"
   },
   "dependencies": {
+    "@mikro-orm/core": "^5.6.15",
+    "@mikro-orm/nestjs": "^5.1.7",
+    "@mikro-orm/postgresql": "^5.6.15",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
@@ -27,6 +31,8 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@mikro-orm/cli": "^5.6.15",
+    "@mikro-orm/entity-generator": "^5.6.15",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -65,5 +71,12 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   }
 }
