--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "generate-entities": "mikro-orm generate-entities --save --path=./database/entities"
   },
   "dependencies": {
+    "@fxts/core": "^0.14.0",
     "@mikro-orm/core": "^5.6.15",
     "@mikro-orm/nestjs": "^5.1.7",
     "@mikro-orm/postgresql": "^5.6.15",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "bcrypt": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
