--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@mikro-orm/postgresql": "^5.6.15",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/passport-jwt": "^3.0.8",
     "bcrypt": "^5.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
@@ -38,7 +40,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.17",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
