--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "generate-entities": "mikro-orm generate-entities --save --path=./database/entities"
+    "generate-entities": "mikro-orm generate-entities --save --path=./database/entities",
+    "create-schema": "mikro-orm schema:create --run"
   },
   "dependencies": {
     "@fxts/core": "^0.14.0",
