--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@fxts/core": "^0.14.0",
     "@mikro-orm/core": "^5.6.15",
+    "@mikro-orm/knex": "^5.6.15",
     "@mikro-orm/nestjs": "^5.1.7",
     "@mikro-orm/postgresql": "^5.6.15",
     "@nestjs/common": "^9.0.0",
