--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@types/passport-jwt": "^3.0.8",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -47,6 +49,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
