--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mikro-orm/nestjs": "^5.1.7",
     "@mikro-orm/postgresql": "^5.6.15",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
