--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.5",
     "@mikro-orm/cli": "^5.6.15",
     "@mikro-orm/entity-generator": "^5.6.15",
     "@nestjs/cli": "^9.0.0",
@@ -50,24 +51,25 @@
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "29.2.4",
+    "@types/jest": "^29.5.1",
     "@types/node": "18.11.18",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.3.1",
+    "jest": "^29.5.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "29.0.3",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
