--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@types/passport-jwt": "^3.0.8",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.4",
+    "multer-s3": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -52,6 +53,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "18.11.18",
     "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.11",
