--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "generate-entities": "mikro-orm generate-entities --save --path=./database/entities",
-    "create-schema": "mikro-orm schema:create --run"
+    "create-schema": "mikro-orm schema:create --run",
+    "migration:up": "mikro-orm migration:up",
+    "schema:update": "mikro-orm schema:update --config=mikro-orm.test.config.ts"
   },
   "dependencies": {
     "@fxts/core": "^0.14.0",
-    "@mikro-orm/core": "^5.6.15",
-    "@mikro-orm/knex": "^5.6.15",
-    "@mikro-orm/nestjs": "^5.1.7",
-    "@mikro-orm/postgresql": "^5.6.15",
+    "@mikro-orm/core": "^5.7.12",
+    "@mikro-orm/knex": "^5.7.12",
+    "@mikro-orm/migrations": "^5.7.12",
+    "@mikro-orm/nestjs": "^5.1.8",
+    "@mikro-orm/postgresql": "^5.7.12",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -45,7 +48,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.5",
-    "@mikro-orm/cli": "^5.6.15",
+    "@mikro-orm/cli": "^5.7.12",
     "@mikro-orm/entity-generator": "^5.6.15",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
@@ -88,7 +91,10 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    }
   },
   "mikro-orm": {
     "useTsNode": true,
