--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/passport-jwt": "^3.0.8",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.4",
+    "knex": "^2.4.2",
     "multer-s3": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
